--- a/src/pages/admin/style.css
+++ b/src/pages/admin/style.css
@@ -110,7 +110,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
 
 .view_Details_btn {
@@ -122,7 +121,7 @@
   background-color: var(--light-blue-color);
   border-bottom: 3px solid var(--blue-color);
 }
-.view_Details_btn button{
+.view_Details_btn button {
   padding: 10px 15px;
   border: none;
   background-color: #fff;
@@ -132,7 +131,7 @@
   font-weight: 500;
 }
 
-.view_Details_btn button:hover{
+.view_Details_btn button:hover {
   background-color: var(--blue-color);
   color: #fff;
 }
@@ -273,4 +272,161 @@ th {
   .admin_logo span {
     display: none;
   }
+}
+
+.butten_view_table {
+  display: flex;
+  gap: 5px;
+}
+
+.Report_Admin {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.table_div_container {
+  position: relative;
+}
+.view_post_details_blur {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  background-color: black;
+  opacity: 0.5;
+}
+
+.admin {
+  position: relative;
+}
+
+.view_post_details {
+  position: absolute;
+  width: 90%;
+  height: 90vh;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* view posts */
+.ViewPosts {
+  background-color: #fff;
+  width: 50%;
+
+  max-height: 80vh;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 5px;
+  overflow: scroll;
+}
+.view_post_user {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.view_post_user img {
+  width: 50px;
+  min-height: 50px;
+  border-radius: 50%;
+}
+
+.view_post_user span {
+  font-weight: bold;
+}
+
+.view_post_image {
+  width: 100%;
+  max-height: 300px;
+  
+  
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background-color: antiquewhite;
+}
+.view_post_image img {
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+}
+
+.view_post_text {
+  font-weight: 400;
+}
+.reported_users {
+  padding: 10px;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  width: 100%;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.reported_users img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.View_detils_head {
+  font-weight: 600;
+  color: var(--blue-color);
+}
+
+.comment_view {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  width: 100%;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.comment_view img {
+  width: 40px;
+  min-height: 40px;
+  border-radius: 50%;
+}
+.comment_view_user {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.view_post_user_cont{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.closeIcon{
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: var(--bg-secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.view_message{
+  color: red;
+}
+
+.chart_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  /* background-color: var(--bg-secondary); */
+  width: 20rem;
 }
